_rendered/apps/cloudnative-pg/cilium_io-ciliumnetworkpolicy-networkpolicy-barman-cloud-plugin.yaml
# Source: postgresdb/charts/netpol-plugin/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: networkpolicy-barman-cloud-plugin
spec:
  endpointSelector: 
    matchLabels:
      app.kubernetes.io/name: plugin-barman-cloud
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
    - 
      fromEndpoints:
      - matchLabels:
          app.kubernetes.io/name: cloudnative-pg
          io.kubernetes.pod.namespace: cloudnative-pg
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
